# Tugas-Akhir

./: .gitignore  CICIDS2018_AE_MLP_.ipynb  CICIDS2018_Comparison_ZeroDay_(2) (1).ipynb  CICIDS2018_LightGBM_ (1).ipynb  CICIDS2018_MLP_.ipynb  CICIDS2018_Preprocessing.ipynb  CICIDS2018_Preprocessing_(1).ipynb  CICIDS2018_Preprocessing_with_EDA (5).ipynb  CICIDS2018_Preprocessing_with_EDA_(1).ipynb  DatasetCICIDS2018
Dataset yang Digunakan/: Cross Dataset Pengujian Zero-Day  Dataset untuk Train Model  DatasetCICIDS2018  Pengujian Zero-Day
MMachine Learning/: CICIDS2018_Preprocessing.ipynb
Machine Learning/: AE.ipynb  AE_Classfier.ipynb  CICIDS2018_AE_MLP_.ipynb  CICIDS2018_Comparison_ZeroDay.ipynb  CICIDS2018_Comparison_ZeroDay_(3).ipynb  CICIDS2018_LightGBM.ipynb  CICIDS2018_MLP.ipynb  CICIDS2018_Preprocessing.ipynb  CICIDS2018_Preprocessing_(3).ipynb  Computational_Paper.ipynb  Convert_AE_MLP_to_Snort.ipynb  Convert_LGBM_MLP_to_Snort.ipynb  Crossdataset_cicids2017.ipynb  EDA_CICIDS2018.ipynb  File PCAP Infiltration - CSECICIDS2018 - Uji Sistem.ipynb  ICICoS2026_FINAL_All_In_One_Reviewer_Compliant_Reevaluation_v2_ZIP_Crossdataset (1).ipynb  LightGBM.ipynb  MLP (2).ipynb  MLP.ipynb  Model Adaptasi menggunakan dataset Live Traffic.ipynb  Random_Forest (1).ipynb  Random_Forest.ipynb  Threshold Tuning Model Awal - Data Validasi.ipynb  (+3 more)
Snort-ML-NIPS/plugin_source/ml_nips/: CMakeLists.txt  scaler_params.h
Snort-ML-NIPS/plugin_source/ml_nips/model_sources/: ml_nips_aemlp.cc  ml_nips_aemlp_new.cc  ml_nips_lgbm.cc  ml_nips_lgbm_new.cc  ml_nips_mlp.cc  ml_nips_mlp_new.cc
(+25 files in other folders)
